--- a/hujne.html
+++ b/hujne.html
@@ -14,11 +14,11 @@
 
       <td><img src="as.jpg" height="240" width="200" align="middle" alt=""></td>
       <td>
-        <h3>Sveiki. Mano vardas Paulius. As mokausi programuoti ir cia yra mano svetaine</h3>
-        <h3>Stai keli faktai apie mane</h3>
+        <h3>Sveiki. Mano vardas Paulius. Cia yra mano svetaine</h3>
+        <h3>Labutis</h3>
         <ul>
-          <li><strong>As esu sportininkas</strong></li>
-          <li><strong>Megstu programuoti</strong></li>
+          <li><strong>As esu Paulius</strong></li>
+          <li><strong>Myliu Emilija</strong></li>
           <li><strong>Turiu suni vardu Jungas</strong></li>
         </ul>
       </td>
