--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <hr>
   <h3>taip pat jungas megsta kelis dalykus:</h3>
   <ol>
-    <li>bezdeti</li>
-    <li>kakoti</li>
+    <li>mustis</li>
+    <li>nardyti</li>
     <li>skraiditi</li>
   </ol>
 <a href="hujne.html">ateik</a>
